# budonsan-law-ai

./: .gitignore  AGENTS.md  [기술 스택 — 최소비용 조합(확정)].txt
.vooster/: project.json  rules.json  vooster.json
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  admin.py  lawyers.py  questions.py
backend/app/core/: config.py  security.py
backend/app/schemas/: answer.py  document.py  lawyer.py  question.py
backend/app/services/: rag.py  supabase.py
supabase/: 00_extensions.sql  01_types.sql  05_functions.sql  10_tables.sql  15_vector_tables.sql  20_rls.sql  README.md  apply_sql_example.cmd
vooster-docs/: architecture.md  code-guideline.md  design-guide.md  guideline.md  ia.md  prd.md  trd.md  user-journey.md
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/admin/: page.tsx
web/src/app/auth/login/: page.tsx
web/src/app/auth/register/: page.tsx
web/src/app/lawyer/: page.tsx
web/src/app/mypage/: page.tsx
web/src/app/questions/[id]/: page.tsx
web/src/app/questions/new/: page.tsx
