[project]
name = "budongsan-law-backend"
version = "0.1.0"
description = "FastAPI backend for the Hybrid Legal Q&A platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.2",
  "uvicorn[standard]==0.30.6",
  "pydantic-settings==2.5.2",
  "httpx==0.25.2",
  "PyJWT[crypto]==2.9.0",
  "python-multipart==0.0.10",
  "langchain==0.2.16",
  "langchain-community==0.2.11",
  "langchain-openai==0.1.17",
  "langgraph==0.0.63",
  "langchain-text-splitters==0.2.0",
  "pypdf==4.3.1",
  "supabase==2.4.0",
  "numpy==1.26.4",
  "tiktoken==0.7.0",
]

[project.optional-dependencies]
dev = [
  "ruff==0.6.9",
]

[tool.uv]
pyproject-support = true
